Actually assert on example query results
Co-authored-by: Mats Rydberg <mats@neotechnology.com>